# rag-document-intelligence

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  documents.py  health.py  search.py
backend/app/models/: documents.py  schemas.py
backend/app/services/: embeddings.py  ingestion.py  llm.py  rag_chain.py  retriever.py  vectorstore.py
backend/app/utils/: chunking.py  text_processing.py
backend/tests/: conftest.py  test_api.py  test_ingestion.py  test_retriever.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/rag/: route.ts
web/app/architecture/: page.tsx
web/app/demo/: page.tsx
web/app/live/: page.tsx
web/components/: ArchitectureDiagram.tsx  ChatInterface.tsx  CodeBlock.tsx  FeatureCard.tsx  Footer.tsx  Header.tsx  LiveRAG.tsx
web/lib/: deepseek.ts
